Se realizan endpoints /usuarios/update y delete
