# swagger.json
@@ -16,11 +16,11 @@
   "servers": [
     {
       "url": "https://purificadora-rio-jordan-api.herokuapp.com/v1",
-      "description": "Heroku"
+      "description": "Servidor en Heroku (Prod)"
     },
     {
       "url": "http://localhost:4015/v1",
-      "description": "servidor local"
+      "description": "Servidor local (Dev)"
     }
   ],
   "tags": [
@@ -140,6 +140,92 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/obtieneDatosUsuario"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/components/responses/ServerError"
+          }
+        }
+      }
+    },
+    "/usuarios/update": {
+      "put": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "usuarios"
+        ],
+        "summary": "Actualización de los datos de un usuario.",
+        "description": "Permite a un usuario logueado modificar total o parcialmente sus datos. Requiere token de autenticación.",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/updateUsuario"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Actualización de datos exitosa",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/updateExitoso"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/components/responses/ServerError"
+          }
+        }
+      }
+    },
+    "/usuarios/delete": {
+      "delete": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "usuarios"
+        ],
+        "summary": "Elimina totalmente a un usuario y sus datos.",
+        "description": "Permite a un usuario logueado eliminar su cuenta y sus datos de la aplicación. Requiere token de autenticación.",
+        "responses": {
+          "200": {
+            "description": "Usuario y sus datos eliminado exitosamente.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/deleteExitoso"
                 }
               }
             }
@@ -394,6 +480,95 @@
               "telefonoRecuperacion": {
                 "type": "string",
                 "example": 9990987654
+              }
+            }
+          }
+        }
+      },
+      "updateUsuario": {
+        "type": "object",
+        "required": [
+          "telefono",
+          "password"
+        ],
+        "properties": {
+          "telefono": {
+            "type": "string",
+            "example": 8331234567
+          },
+          "nombre": {
+            "type": "string",
+            "example": "Juan"
+          },
+          "apellidos": {
+            "type": "string",
+            "example": "Martínez"
+          }
+        }
+      },
+      "updateExitoso": {
+        "type": "object",
+        "properties": {
+          "error": {
+            "type": "string",
+            "example": null
+          },
+          "message": {
+            "type": "string",
+            "example": "Actualización exitosa"
+          },
+          "user": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string",
+                "example": "6255d9b05e779cf3a8a22c76"
+              },
+              "telefono": {
+                "type": "string",
+                "example": 8331234567
+              },
+              "nombre": {
+                "type": "string",
+                "example": "Juan"
+              },
+              "apellidos": {
+                "type": "string",
+                "example": "Martínez"
+              }
+            }
+          }
+        }
+      },
+      "deleteExitoso": {
+        "type": "object",
+        "properties": {
+          "error": {
+            "type": "string",
+            "example": null
+          },
+          "message": {
+            "type": "string",
+            "example": "Usuario y sus datos eliminados exitosamente"
+          },
+          "user": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string",
+                "example": "6255d9b05e779cf3a8a22c76"
+              },
+              "telefono": {
+                "type": "string",
+                "example": 8331234567
+              },
+              "nombre": {
+                "type": "string",
+                "example": "Juan"
+              },
+              "apellidos": {
+                "type": "string",
+                "example": "Martínez"
               }
             }
           }
